--- a/docs/sql/sfmc-sql-functions.mdx
+++ b/docs/sql/sfmc-sql-functions.mdx
@@ -75,7 +75,7 @@ You can concatenate any number of strings by just adding them comma separated.
 The `FORMAT` works only with datetime and numeric values and requires:
 
 1. Value to be formatted (can be column, string or function)
-2. Format to be applied (more on that later)
+2. Format specifier to be applied
 3. Optionally - ISO culture code
 
 Why I'm writing about `FORMAT` here, when I just wrote that it doesn't work with Strings? Because you can use [`CONVERT`](#convert) function to change some of your strings into working data types. Consider changing string dates into datetime or phone numbers into integers to format them easily. Check out [`FORMAT` with Dates](#format-with-dates) and [`FORMAT` with Numbers](#format-with-numbers) for more information.
@@ -86,7 +86,7 @@ Why I'm writing about `FORMAT` here, when I just wrote that it doesn't work with
 
 I already highlighted most important information about `FORMAT` function when covering String Manipulation (check [here](#format-with-strings)), so now is time to dive into use cases.
 
-First that comes to mind when dealing with US-centric SFMC is to change the date format. For personalization. For comparision between system and imported dates outside of the query. For preparing data that will be exported to external system.
+First that comes to mind when dealing with US-centric SFMC is to change the date format. For personalization. For comparision between system and imported dates outside of the query. For preparing data that will be exported to external system with specific format requirements.
 
 ```sql {2-4} title="Instead of creating complex AMPScript logic to adapt dates, just format them"
 SELECT
@@ -96,7 +96,52 @@ SELECT
 
 ```
 
-In the example above, first two `FORMAT` functions return date in the same format - `30/10/2020`. First using manually provided one. Second by taking current UTC date. The last line outputs `Freitag, 7. Februar 2020`. Use case? Run it with [`CASE`](sfmc-sql-case) to change your basic date into language-personalized expanded date.
+In the example above, first two `FORMAT` functions return date in the same format - `30/10/2020`. First using manually provided one. Second by taking current UTC date. The last line outputs `Freitag, 7. Februar 2020`. Use case? For example run it with [`CASE`](sfmc-sql-case) to change your short date into language-personalized long date.
+
+#### Supported date formats
+
+In the above example you could see three different format specifiers used to manipulate the date, but there is much more avaialble. You can find the most useful below:
+
+| Format specifier | Description | Example (for US culture) |
+| -- | -- | -- |
+| 'd' | Short date | 10/30/2020 |
+| 'D' | Long date | Friday, October 30, 2020 |
+| 'm'/'M' | Month Day | October 30 |
+| 'y'/'Y' | Year Month | October 2020 |
+| 't' | Short time | 2:15 PM |
+| 'T' | Long time | 2:15:30 PM |
+| 'g' | General short time | 10/30/2020 2:15 PM |
+| 'G' | General long time | 10/30/2020 2:15:30 PM |
+| 'f' | Full short time | Friday, October 30, 2020 2:15 PM |
+| 'F' | Full long time | Friday, October 30, 2020 2:15:30 PM |
+| 'r'/'R' | RFC1123 | Fri, 30 Oct 2020 14:15:30 GMT |
+
+Just as highlighted in the table header - the examples are for the SFMC default US culture formating. If you add another culture code as third parameter, the outcome will be different, as various countries have different defaults of elements order.
+
+Of course, you are not limited to the formats shown above. Whenever you want something different, you can create your own format by just providing full pattern instead of short specifier by using those:
+
+| Format specifier | Description | Example (for US culture) |
+| -- | -- | -- |
+| 'd' | Day of the month | 1 |
+| 'dd' | Zero-based day of the month | 01 |
+| 'ddd' | Abbreviated day of the month | Mon |
+| 'dddd' | Full day of the month | Monday |
+| 'M' | Month | 1 |
+| 'MM' | Zero-based month | 01 |
+| 'MMM' | Abbreviated month | Jan |
+| 'MMMM' | Full month | January |
+| 'yy' | Last two digits of the year | 20 |
+| 'yyyy' | Four digits year | 2020 |
+| 'h' | Hour (12-hour clock) | 1 |
+| 'hh' | Zero-based hour (12-hour clock) | 01 |
+| 'tt' | AM/PM designator | AM |
+| 'H' | Hour (24-hour clock) | 13 |
+| 'HH' | Zero-based hour (24-hour clock) | 01 |
+| 'm' | Minute | 1 |
+| 'mm' | Zero-based minute | 01 |
+| 's' | Seconds | 1 |
+| 'ss' | Zero-based seconds | 01 |
+
 
 ## Numeric Manipulation
 
