Splitting SQL Functions doc page into multiple pages for better readability

--- a/docs/sql/sfmc-sql-select.mdx
+++ b/docs/sql/sfmc-sql-select.mdx
@@ -74,7 +74,7 @@ SELECT
     FirstName + ' ' + LastName AS FullName
 ```
 
-It becomes mighty with the [SQL functions](sfmc-sql-functions).
+It becomes mighty with the [SQL String functions](sfmc-sql-string-functions).
 
 :::
 
@@ -225,4 +225,4 @@ Despite official [SFMC SQL documentation](https://help.salesforce.com/articleVie
 
 Unfortunately, SFMC SQL does not support variables.
 
-Fortunately, it does support (selected) functions. Learn more about them in [SFMC SQL Functions documentation](sfmc-sql-functions).
+Fortunately, it does support (selected) functions. Learn more about them in SFMC SQL Functions documentation pages related to [Strings](sfmc-sql-string-functions), [Dates](sfmc-sql-date-functions), [Numbers](sfmc-sql-numeric-functions).
