--- a/docs/sql/sfmc-sql-numeric-functions.mdx
+++ b/docs/sql/sfmc-sql-numeric-functions.mdx
@@ -11,3 +11,11 @@ import { LeadText } from '../../src/components/LeadText.js';
 <LeadText content='Writing in Progress' />
 
 ### FORMAT with Numbers
+
+The `FORMAT` works only with datetime and numeric values and requires:
+
+1. Value to be formatted (can be column, string or function)
+2. Format specifier to be applied
+3. Optionally - ISO culture code
+
+It is perfect tool to manipulate any numbers (or numeric strings) available in your Data Extensions.
