--- a/docs/sql/sfmc-sql-numeric-functions.mdx
+++ b/docs/sql/sfmc-sql-numeric-functions.mdx
@@ -2,13 +2,17 @@
 id: sfmc-sql-numeric-functions
 title: SFMC SQL Numeric Functions
 sidebar_label: Numeric Functions
-description: Writing in Progress
+description: Take control over numbers with built-in SQL functions. Let the query do the job.
 draft: true
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content='Writing in Progress' />
+<LeadText content='Take control over numbers with built-in SQL functions. Let the query do the job.' />
+
+Saleforce Marketing Cloud SQL implementation does not support user-defined functions. There are, however, multiple built-in functions that are really useful on day-to-day basis when working with queries.
+
+Here, I will cover only selected numeric functions, that I find most useful for Marketing Automation purposes. They will help you do basic calculations or format the numbers to match your needs.
 
 ### FORMAT with Numbers
 
