--- a/docs/sql/sfmc-sql-string-functions.mdx
+++ b/docs/sql/sfmc-sql-string-functions.mdx
@@ -2,13 +2,13 @@
 id: sfmc-sql-string-functions
 title: SFMC SQL String Functions
 sidebar_label: String Functions
-description: Writing in Progress
+description: Take control over strings with built-in SQL functions. Let the query do the job.
 draft: true
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content='Writing in Progress' />
+<LeadText content='Take control over strings with built-in SQL functions. Let the query do the job.' />
 
 Saleforce Marketing Cloud SQL implementation does not support user-defined functions. There are, however, multiple built-in functions that are really useful on day-to-day basis when working with queries.
 
