--- a/docs/sql/sfmc-sql-string-functions.mdx
+++ b/docs/sql/sfmc-sql-string-functions.mdx
@@ -3,42 +3,41 @@ id: sfmc-sql-string-functions
 title: SFMC SQL String Functions
 sidebar_label: String Functions
 description: Take control over strings with built-in SQL functions. Let the query do the job.
-draft: true
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content='Take control over strings with built-in SQL functions. Let the query do the job.' />
 
-Saleforce Marketing Cloud SQL implementation does not support user-defined functions. There are, however, multiple built-in functions that are really useful on day-to-day basis when working with queries.
+Salesforce Marketing Cloud SQL implementation does not support user-defined functions. There are, however, multiple built-in functions that are useful on a day-to-day basis when working with queries.
 
 Here, I will cover only selected string functions, that I find most useful for Marketing Automation purposes. They will help you change the values, split and concatenate them, or find elements within.
 
 :::note You Should Know
 
-All string functions in SQL are using 1-based index instead of 0-based indexing known from, for example, JavaScript. First character starts at index 1. It is important for both providing correct value to parameters, as well as correctly interpreting the results.
+All string functions in SQL are using a 1-based index instead of 0-based indexing known from, for example, JavaScript. The first character starts at index 1. It is crucial for both providing the correct value to the parameters, as well as for correctly interpreting the results.
 
 :::
 
 ### CHARINDEX
 
-`CHARINDEX` function lets you find if and where one string is in another. You pass the value you want to find, the value in which you want to search and, optionally, the index of from which you want to start the search.
+`CHARINDEX` function lets you find if and where one string is in another. You pass the value you want to find, the value in which you wish to search and, optionally, the index from which you want to start the search.
 
-```sql title="Search for 'Manager' in JobTitle column starting with first index"
+```sql title="Search for 'Manager' in the JobTitle column starting with the first index"
 CHARINDEX("Manager", JobTitle, 1)
 ```
 
-In the example above I used the optional starting index, but in most cases you will not be using it. The `CHARINDEX` defaults to starting from the beginning, so the above line can be written shorter as `CHARINDEX("Manager", JobTitle)`.
+In the example above, I used the optional starting index, but in most cases, you will not be using it. The `CHARINDEX` defaults to starting from the beginning so we can write the above line shorter as `CHARINDEX("Manager", JobTitle)`.
 
 The function returns one three possible values:
 
 1. NULL - if either value to find or searched value is NULL
 2. 0 - if the value to find is not within the searched value
-3. any other digit - the index where the value to find starts within the searched value - if there are multiple ocurrences, the result will shown starting index of just the first one.
+3. any other digit - the index where the value to find starts within the searched value - if there are multiple occurrences, the result will show the starting index of just the first one.
 
 By default, `CHARINDEX` in SFMC is case-insensitive in its searches. You can, however, enforce case-sensitivity by adding `COLLATE`:
 
-```sql title="Case sensitive CHARINDEX search - note lack of comma between the value and COLLATE"
+```sql title="Case sensitive CHARINDEX search - note lack of a comma between the value and COLLATE"
 CHARINDEX("Manager", JobTitle COLLATE Latin1_General_CS_AS)
 ```
 
@@ -65,17 +64,17 @@ The above query checks whether there is a space within `InstitutionName` value a
 
 You can use it on both existing values pulled from source data extension, as well as on custom strings and digits added directly in the query. In most cases, you will mix both.
 
-```sql {4} title="Perfect to prepare your data for personalization"
+```sql {4} title="Perfect for preparing your data for personalization"
 SELECT
     SubscriberKey,
     EmailAddress,
     CONCAT(FirstName, ' ', LastName) AS FullName
 ```
 
-You can concatenate any number of strings by just adding them comma separated.
+You can concatenate any number of strings by just adding them comma-separated.
 
 ### FORMAT with Strings
 
-`FORMAT` function lets you quickly change the data into a different format. In Salesforce Marketing Cloud it is especially useful, as you cannot create your own functions. `FORMAT` might save you huge headaches.
+`FORMAT` function lets you quickly change the data into a different format. In Salesforce Marketing Cloud, it is especially useful, as you cannot create your functions. `FORMAT` might save you massive headaches.
 
-The `FORMAT` works only with datetime and numeric values. Why I'm writing about it here then? Because you can use [`CONVERT`](sfmc-sql-conversion-functions#convert) function to change some of your strings into compliant data types. Consider changing string dates into datetime or phone numbers into integers to format them easily. Check out [`FORMAT` with Dates](sfmc-sql-date-functions#format-with-dates) and [`FORMAT` with Numbers](sfmc-sql-numeric-functions#format-with-numbers) for more information.
+The `FORMAT` works only with DateTime and numeric values. Why I'm writing about it here then? Because you can use [`CONVERT`](sfmc-sql-conversion-functions#convert) function to change some of your strings into compliant data types. Consider changing string dates into DateTime or phone numbers into integers to format them easily. Check out [`FORMAT` with Dates](sfmc-sql-date-functions#format-with-dates) and [`FORMAT` with Numbers](sfmc-sql-numeric-functions#format-with-numbers) for more information.
